force-app/main/default/objects/Portfolio__c/fields/Awards__c.field-meta.xml
<CustomField>
    <fullName>Awards__c</fullName>
    <label>Awards</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>