force-app/main/default/objects/Portfolio__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>CompanyName</description>
    <label>CompanyName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>