force-app/main/default/objects/Portfolio__c/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>Languages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>