force-app/main/default/objects/Portfolio__c/fields/SalesforceCertifications__c.field-meta.xml
<CustomField>
    <fullName>SalesforceCertifications__c</fullName>
    <label>SalesforceCertifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Governance Superbadge Unit</fullName>
            </value>
            <value>
                <fullName>Admin Super Set</fullName>
            </value>
            <value>
                <fullName>Advanced Apex Specialist</fullName>
            </value>
            <value>
                <fullName>Advanced Billing Specialist</fullName>
            </value>
            <value>
                <fullName>Apex Specialist</fullName>
            </value>
            <value>
                <fullName>App Builder Super Set</fullName>
            </value>
            <value>
                <fullName>App Customization Specialist</fullName>
            </value>
            <value>
                <fullName>Approval Process Management Superbadge Unit</fullName>
            </value>
            <value>
                <fullName>Approval Process Specialist Superbadge</fullName>
            </value>
            <value>
                <fullName>Approval Process Troubleshooting Superbadge Unit</fullName>
            </value>
            <value>
                <fullName>Authentication Governance Superbadge Unit</fullName>
            </value>
            <value>
                <fullName>Billing Specialist</fullName>
            </value>
            <value>
                <fullName>Billing Specialist Super Set</fullName>
            </value>
            <value>
                <fullName>Business Administration Specialist</fullName>
            </value>
            <value>
                <fullName>CRM Analytics Data Preparation Specialist</fullName>
            </value>
            <value>
                <fullName>CRM Analytics Super Set</fullName>
            </value>
            <value>
                <fullName>CRM Analytics and Einstein Discovery Insights Specialist</fullName>
            </value>
            <value>
                <fullName>Data Categorization and Access Superbadge Unit</fullName>
            </value>
            <value>
                <fullName>Data Integration Specialist</fullName>
            </value>
            <value>
                <fullName>Data Protection Superbadge Unit</fullName>
            </value>
            <value>
                <fullName>Data Security Specialist Superbadge</fullName>
            </value>
            <value>
                <fullName>Developer Super Set</fullName>
            </value>
            <value>
                <fullName>Extended User Access and Restriction Superbadge Unit</fullName>
            </value>
            <value>
                <fullName>Financial Services Cloud Specialist</fullName>
            </value>
            <value>
                <fullName>Flow Administration Superbadge Unit</fullName>
            </value>
            <value>
                <fullName>Flow Elements and Resources Specialist Superbadge</fullName>
            </value>
            <value>
                <fullName>Flow Fundamentals Superbadge Unit</fullName>
            </value>
            <value>
                <fullName>Flow Optimization Superbadge Unit</fullName>
            </value>
            <value>
                <fullName>Health Cloud Specialist</fullName>
            </value>
            <value>
                <fullName>Lightning Experience Reports &amp; Dashboards Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>