force-app/main/default/objects/Portfolio__c/fields/SoftwareTools__c.field-meta.xml
<CustomField>
    <fullName>SoftwareTools__c</fullName>
    <label>SoftwareTools</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>