force-app/main/default/objects/Portfolio__c/fields/TechnicalSkills__c.field-meta.xml
<CustomField>
    <fullName>TechnicalSkills__c</fullName>
    <label>TechnicalSkills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>